Bug 181273 "Set As Wallpaper" should not save in windows directory patch by mailto:torisugari@gmail.com r=dean tessman sr=neil